# drf-api-permissions-postgres

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
publications/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
publications/migrations/: 0001_initial.py  0002_auto_20201227_2337.py
